syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "GrpcEdsService";

package envoy;

// service definition.
service EndpointRegisterService {
  // Sends a greeting
  rpc List (google.protobuf.Empty) returns (RegisterListResponse);
  rpc Get (RegisterGetRequest) returns (RegisterService);
  rpc Add (RegisterAddRequest) returns (RegisterService);
  rpc Update (RegisterUpdateRequest) returns (RegisterService);
  rpc Delete (RegisterDeleteRequest) returns (google.protobuf.Empty);
}

// The request message
message RegisterGetRequest {
  string service_name = 1;
}
message RegisterAddRequest {
  string service_name = 1;
  RegisterService service = 2;
}
message RegisterUpdateRequest {
  string service_name = 1;
  RegisterService service = 2;
}
message RegisterDeleteRequest {
  string service_name = 1;
}

// The response message
message RegisterListResponse {
  map<string, RegisterService> services = 1;
}

// types
message RegisterService {
  repeated RegisterServiceHost hosts = 1;
}
message RegisterServiceHost {
  string ip_address = 1;
  uint32 port = 2;
  RegisterServiceTags tags = 3;
}
message RegisterServiceTags {
  string az = 1;
  bool canary = 2;
  uint32 load_balancing_weight = 3;
}
